# glfps

./: .gitignore  CMakeLists.txt  Makefile  compile_flags.txt
src/: CMakeLists.txt  includes.hpp  main.cpp
src/engine/: engine.cpp  engine.hpp  window.cpp  window.hpp
src/engine/graphics/: camera.cpp  camera.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp
src/engine/input/: input.cpp  input.hpp
src/engine/objects/: GameObject.cpp  GameObject.hpp
src/engine/util/: util.cpp  util.hpp
src/game/: game.cpp  game.hpp
